--- a/aula-02/index.html
+++ b/aula-02/index.html
@@ -23,8 +23,17 @@
             Gostaria de ter maior qualidade nas suas canetas? Chegou o produto imperdível!!!!!!!!!!!!!!!
             Caneta Millos, a que olha especialmente pra você
         </h2>
+        <img src="img/gabrielmillos.jpeg" alt="Homem  como bandanna vermelha e sem blusa">
         <img src="img/ricardomilos.jpg" alt="Homem  como bandanna vermelha e sem blusa">
-        
     </header>
+
+    <main>
+        <section>
+            <form action="#">
+                <span>Sua senha::</span>
+                <input type="password">
+            </form>
+        </section>
+    </main>
 </body>
 </html>
