--- a/aula-04/index.html
+++ b/aula-04/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
-
+    <script src="js/script.js" defer></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Gabriel Millos</title>
 </head>
@@ -48,6 +48,9 @@
                     <input type="text" name="mensagem" id="">
                 </div>
             </form>
+            <div>
+                <button>Enviar</button>
+            </div>
         </div>
     </section>
 </body>
